# requite_cxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  attributes.cpp  attributes.hpp  binary.cpp  binary.hpp  break_type.hpp  build.cpp  build_command.hpp  calling_convention.cpp  calling_convention.hpp  codeunit.hpp  compiler.hpp  encoding.cpp  encoding.hpp  export_group.cpp  export_group.hpp  expression.hpp  file_io.cpp  file_io.hpp  fixed_point.hpp  floating_point.hpp  floating_point_type.cpp  floating_point_type.hpp  global.hpp  integer.hpp  integer_type.cpp  integer_type.hpp  label.hpp  literal.cpp  literal.hpp  literal_type.hpp  llvm_extensions.cpp  llvm_extensions.hpp  local.cpp  local.hpp  main.cpp  object.cpp  object.hpp  object_extension.hpp  opcode.cpp  (+28 more)
src/builder/: CMakeLists.txt  add.cpp  address_of.cpp  assertion.cpp  assignment.cpp  bit_cast.cpp  bitwise_and.cpp  bitwise_complement.cpp  bitwise_or.cpp  bitwise_xor.cpp  blocks.cpp  bool.cpp  builder.hpp  call.cpp  condition.cpp  constant.cpp  construct.cpp  dereference.cpp  destruct.cpp  div.cpp  eq.cpp  for_loop.cpp  frame.cpp  gt.cpp  index_into.cpp  infinite_loop.cpp  jump.cpp  llvm_builder.cpp  local.cpp  logical.cpp  lt.cpp  member.cpp  memcpy.cpp  module.cpp  mul.cpp  null.cpp  object.cpp  pointer_depth.cpp  pointer_size.cpp  procedures.cpp  (+11 more)
src/cataloger/: CMakeLists.txt  attributes.cpp  catalog.cpp  cataloger.hpp  export_group.cpp  global.cpp  module.cpp  object.cpp  object_extension.cpp  procedure.cpp  property.cpp  type_alias.cpp
src/module/: CMakeLists.txt  ast.cpp  compile.cpp  imports.cpp  ir.cpp  module.hpp  name.cpp  resolve_type_aliases.cpp  source.cpp  symbols.cpp
src/resolver/: CMakeLists.txt  constants.cpp  llvm.cpp  (+6 more)
(+33 files in other folders)
